--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,7 +49,7 @@ body {
 }
 .button.function {
 	color: white;
-	background-color: #c64f81;
+	background-color: #252d60;
 	border-bottom: black 8px solid;
 	border-top: 4px #6f6f6f solid;
 }
